# crybot

./: .env.example  .env.test  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  GIT_PULL_INSTRUCTION.md  IMPLEMENTATION_REPORT.md  LICENSE  Makefile  PRIVACY_POLICY.md  README.md  README_YOOMONEY.md  SETUP_INSTRUCTIONS.md  admin.py  ai.py  bot.py  bot_vk.py  cache_monitoring.py  config.py  content.py  crycat.db  docker-compose.yml  economy_social.py  feature_branch_note.md  games.py  games_extended.py  i18n.py  install_dependencies.bat  monitoring.py  pr_description.md  pyproject.toml  requirements.txt  start_bot.bat  start_bot.ps1  storage.py  streaming.py  test_new_functionality.py  test_new_modules.py  tests.py  (+3 more)
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  SECURITY.md  dependabot.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
commands/: router.py
data/: profiles.json
